Add game.html and style.css

--- a/game.html
+++ b/game.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Scribbles It!</title>
-</head>
-<body>
-    <h1>HELLO</h1>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Scribbles It</title>
+  </head>
+  <body>
+    <nav>
+      <p>Scribbles It!</p>
+    </nav>
+    <div id="main">
+      <div id="drawing-area">
+        <div id="canvas"></div>
+        <div id="toolbar"></div>
+      </div>
+      <div id="chatbox"></div>
+    </div>
+  </body>
 </html>
