included socket.io and p5.js frontend

--- a/public/game.html
+++ b/public/game.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Scribbles It</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="script.js" defer></script>
+    <title>Scribbles It!</title>
   </head>
   <body>
     <nav>
