--- a/public/game.html
+++ b/public/game.html
@@ -17,7 +17,27 @@
     <div id="main">
       <div id="drawing-area">
         <div id="canvas"></div>
-        <div id="toolbar"></div>
+        <div id="toolbar">
+          <div id="color">
+              <button class="colorbutton" id="red" type="button"></button>
+              <button class="colorbutton" id="orange" type="button"></button>
+              <button class="colorbutton" id="yellow" type="button"></button>
+              <button class="colorbutton" id="green" type="button"></button>
+              <button class="colorbutton" id="blue" type="button"></button>
+              <button class="colorbutton" id="black" type="button"></button>
+          </div>
+          <div id="brush">
+            <button class="brushbutton" id="small" type="button"></button>
+            <button class="brushbutton" id="medium" type="button"></button>
+            <button class="brushbutton" id="big" type="button"></button>
+          </div>
+          <div>
+            <button id="erase-button" type="button"></button>
+          </div>
+          <div id="clear">
+            <button id="clear-button" type="button">Clear</button>
+          </div>
+        </div>
       </div>
       <div id="chatbox">
         <div class="message-box">
