Add the drawer and score message box

--- a/public/game.html
+++ b/public/game.html
@@ -37,6 +37,11 @@
           <div id="clear">
             <button id="clear-button" type="button">Clear</button>
           </div>
+          <div id="draw-score">
+            <div id="drawer-box"></div>
+            <hr>
+            <div id="score">Score: 10</div>
+          </div>
         </div>
       </div>
       <div id="chatbox">
