--- a/public/game.html
+++ b/public/game.html
@@ -38,9 +38,9 @@
             <button id="clear-button" type="button">Clear</button>
           </div>
           <div id="draw-score">
-            <div id="drawer-box"></div>
+            <div id="drawer-box">You are the guesser! Guess the drawing.</div>
             <hr>
-            <div id="score">Score: 10</div>
+            <div id="score">Score: 0</div>
           </div>
         </div>
       </div>
