--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
       <div id="game">
         <a href="https://scribbles-it.herokuapp.com/game">
         <p id="title">Guess the drawing</p>
-        <p id="description">You will be paired with a random player. You two will draw and guess
-        each other's drawing!</p>
+        <p id="description">You will be paired with random players in this drawing room. You guys will draw and guess
+        one another's drawing!</p>
         <img src="images/game.png">
         </a>
       </div>
