--- a/public/paint.html
+++ b/public/paint.html
@@ -8,6 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/paintapp.js" defer></script>
+    <style media="screen">
+      nav {
+        background-color: SteelBlue;
+        text-shadow: 3px 3px CadetBlue;
+      }
+    </style>
     <title>Scribbles It!</title>
   </head>
   <body>
