--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="/style2.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito|Mansalva&display=swap" rel="stylesheet">
     <title>Scribbles It!</title>
   </head>
@@ -14,7 +14,7 @@
         <p id="title">Painting room</p>
         <p id="description">Join a painting room and paint with other people. Everyone in this Painting room
         can draw on the canvas!</p>
-        <img src="images/paint.png">
+        <img src="/images/paint.png">
         </a>
       </div>
       <div id="game">
@@ -22,7 +22,7 @@
         <p id="title">Guess the drawing</p>
         <p id="description">You will be paired with random players in this drawing room. You guys will draw and guess
         one another's drawing!</p>
-        <img src="images/game.png">
+        <img src="/images/game.png">
         </a>
       </div>
     </div>
