--- a/public/game.html
+++ b/public/game.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav>
-      <p>Scribbles It!</p>
+      <p><a href="/">Scribbles It!</a></p>
     </nav>
     <div id="main">
       <div id="drawing-area">
