--- a/public/paint.html
+++ b/public/paint.html
@@ -13,12 +13,19 @@
         background-color: SteelBlue;
         text-shadow: 3px 3px CadetBlue;
       }
+      a {
+        text-decoration: none;
+        color: Khaki;
+      }
+      a:hover {
+        text-shadow: 5px 5px DimGray;
+      }
     </style>
     <title>Scribbles It!</title>
   </head>
   <body>
     <nav>
-      <p>Scribbles It!</p>
+      <p><a href="/">Scribbles It!</a></p>
     </nav>
     <div id="main">
       <div id="drawing-area">
