--- a/public/paint.html
+++ b/public/paint.html
@@ -31,7 +31,7 @@
       <div id="drawing-area">
         <div id="canvas"></div>
         <div id="toolbar">
-          <div id="color">
+          <div id="color" onmousedown="buttonSound.play()">
               <button class="colorbutton" id="red" type="button"></button>
               <button class="colorbutton" id="orange" type="button"></button>
               <button class="colorbutton" id="yellow" type="button"></button>
@@ -39,12 +39,12 @@
               <button class="colorbutton" id="blue" type="button"></button>
               <button class="colorbutton" id="black" type="button"></button>
           </div>
-          <div id="brush">
+          <div id="brush" onmousedown="buttonSound.play()">
             <button class="brushbutton" id="small" type="button"></button>
             <button class="brushbutton" id="medium" type="button"></button>
             <button class="brushbutton" id="big" type="button"></button>
           </div>
-          <div>
+          <div onmousedown="buttonSound.play()">
             <button id="erase-button" type="button"></button>
           </div>
         </div>
