Change eraser icon back

--- a/public/paint.html
+++ b/public/paint.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <nav>
-      <p><a href="/">Scribbles It!</a></p>
+      <p><a onmousedown="buttonSound.play()" href="/">Scribbles It!</a></p>
     </nav>
     <div id="main">
       <div id="drawing-area">
