Added clear function back into paint app

--- a/public/paint.html
+++ b/public/paint.html
@@ -47,6 +47,9 @@
           <div onmousedown="buttonSound.play()">
             <button id="erase-button" type="button"></button>
           </div>
+          <div id="clear" onmousedown="buttonSound.play()">
+            <button id="clear-button" type="button">Clear</button>
+          </div>
         </div>
       </div>
       <div id="chatbox">
