Added pressed css rule

--- a/public/game.html
+++ b/public/game.html
@@ -24,7 +24,7 @@
               <button onmousedown="buttonSound.play()" class="colorbutton" id="yellow" type="button"></button>
               <button onmousedown="buttonSound.play()" class="colorbutton" id="green" type="button"></button>
               <button onmousedown="buttonSound.play()" class="colorbutton" id="blue" type="button"></button>
-              <button onmousedown="buttonSound.play()" class="colorbutton" id="black" type="button"></button>
+              <button onmousedown="buttonSound.play()" class="colorbutton pressed" id="black" type="button"></button>
           </div>
           <div id="brush">
             <button onmousedown="buttonSound.play()" class="brushbutton" id="small" type="button"></button>
