--- a/public/paint.html
+++ b/public/paint.html
@@ -40,7 +40,7 @@
               <button onmousedown="buttonSound.play()" class="colorbutton pressed" id="black" type="button"></button>
           </div>
           <div id="brush">
-              <button onmousedown="buttonSound.play()" class="brushbutton" id="small" type="button"></button>
+              <button onmousedown="buttonSound.play()" class="brushbutton pressed" id="small" type="button"></button>
               <button onmousedown="buttonSound.play()" class="brushbutton" id="medium" type="button"></button>
               <button onmousedown="buttonSound.play()" class="brushbutton" id="big" type="button"></button>
           </div>
