Fix chatbox styling

--- a/public/game.html
+++ b/public/game.html
@@ -44,12 +44,15 @@
           </div>
         </div>
       </div>
-      <div id="chatbox">
-        <div class="message-box">
-          <ul id="messages"></ul>
+      <div id="chat-space">
+        <p id="chat-header">Guess box</p>
+        <div id="chatbox">
+          <div class="message-box">
+            <ul id="messages"></ul>
+          </div>
         </div>
         <form>
-            <input id='text' autocomplete="off" placeholder="Guess the drawing!"/>
+              <input id='text' autocomplete="off" placeholder="Guess the drawing!"/>
         </form>
       </div>
     </div>
