--- a/public/paint.html
+++ b/public/paint.html
@@ -52,9 +52,12 @@
           </div>
         </div>
       </div>
-      <div id="chatbox">
-        <div class="message-box">
-          <ul id="messages"></ul>
+      <div id="chat-space">
+        <p id="chat-header">Chat</p>
+        <div id="chatbox">
+          <div class="message-box">
+            <ul id="messages"></ul>
+          </div>
         </div>
         <form>
             <input id='text' autocomplete="off" placeholder="Say hello!"/>
