Change chatbox header

--- a/public/game.html
+++ b/public/game.html
@@ -45,14 +45,14 @@
         </div>
       </div>
       <div id="chat-space">
-        <p id="chat-header">Guess box</p>
         <div id="chatbox">
+          <p id="chat-header">Take a guess!</p>
           <div class="message-box">
             <ul id="messages"></ul>
           </div>
         </div>
         <form>
-              <input id='text' autocomplete="off" placeholder="Guess the drawing!"/>
+              <input id='text' autocomplete="off" placeholder="e.g: flower"/>
         </form>
       </div>
     </div>
