--- a/public/paint.html
+++ b/public/paint.html
@@ -53,14 +53,14 @@
         </div>
       </div>
       <div id="chat-space">
-        <p id="chat-header">Chat</p>
         <div id="chatbox">
+          <p id="chat-header">Send a message</p>
           <div class="message-box">
             <ul id="messages"></ul>
           </div>
         </div>
         <form>
-            <input id='text' autocomplete="off" placeholder="Say hello!"/>
+            <input id='text' autocomplete="off" placeholder="Great drawing!"/>
         </form>
       </div>
     </div>
