Change color of chat header

--- a/public/paint.html
+++ b/public/paint.html
@@ -20,6 +20,10 @@
       a:hover {
         text-shadow: 5px 5px DimGray;
       }
+
+      #chat-header {
+        color: IndianRed;
+      }
     </style>
     <title>Scribbles It!</title>
   </head>
