--- a/public/paint.html
+++ b/public/paint.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Nunito|Mansalva&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
@@ -58,7 +59,10 @@
       </div>
       <div id="chat-space">
         <div id="chatbox">
-          <p id="chat-header">Send a message</p>
+          <div id="chat-placeholder">
+            <img src="/images/emoji_18.gif" alt="happy emoji">
+            <p>Send a message!</p>
+          </div>
           <div class="message-box">
             <ul id="messages"></ul>
           </div>
